# google-maps-places-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  places.rs  response.rs
test/: place-001.json  place-denied.json  place-invalid.json
