[package]
name = "google-maps-places"
version = "0.1.0"
edition = "2018"
description = "Simple crate to get Google Maps Place results"
homepage = "https://github.com/jonsaw/google-maps-places-rs"
documentation = "https://github.com/jonsaw/google-maps-places-rs"
repository = "https://github.com/jonsaw/google-maps-places-rs"
readme = "https://github.com/jonsaw/google-maps-places-rs"
license = "MIT"
keywords = ["maps", "api", "places"]
categories = ["api-bindings"]

exclude = [
  "test/*",
]

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.30.0"
