[package]
name = "google-maps-places"
version = "0.1.2"
edition = "2018"
description = "Simple crate to get Google Maps Place results"
homepage = "https://github.com/jonsaw/google-maps-places-rs"
documentation = "https://github.com/jonsaw/google-maps-places-rs"
repository = "https://github.com/jonsaw/google-maps-places-rs"
readme = "README.md"
license = "MIT"
keywords = ["maps", "api", "places"]
categories = ["api-bindings"]

exclude = [
  "test/*",
]

[dependencies]
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1.1", features = ["json"] }

# Feature optional dependencies
async-graphql = { version = "2.9.9", optional = true, features = ["decimal"] }

[dev-dependencies]
mockito = "0.30.0"
