[package]
name = "google-maps-places"
version = "0.1.4"
edition = "2018"
description = "Simple crate to get Google Maps Place results"
homepage = "https://github.com/jonsaw/google-maps-places-rs"
documentation = "https://docs.rs/google-maps-places"
repository = "https://github.com/jonsaw/google-maps-places-rs"
readme = "README.md"
license = "MIT"
keywords = ["maps", "api", "places"]
categories = ["api-bindings"]

exclude = [
  "test/*",
]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1.1", features = ["json"] }

# Feature optional dependencies
async-graphql = { version = "2.9.9", optional = true }

[dev-dependencies]
mockito = "0.30.0"
